--- a/exo_modif_DOM.html
+++ b/exo_modif_DOM.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="holder.min.js"></script>
 
@@ -211,3 +212,5 @@
     </footer>
   </body>
 </html>
+
+<script src="script_modif_DOM.js"></script>
